# post-hypermodern-python-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: README.md  mise.toml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.module_name}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/: main.py  {% if cookiecutter.create_example_cli == 'y' -%} main.py {%- endif %}
